# task_guard_agent

./: .gitignore  CLAUDE.md  README.md
Document/: spec.md  (+3 more)
SourceCode/: .gitignore  README.md  build.cmd  pyproject.toml  start-gui.cmd
SourceCode/config/: config-claude.json.template  config-openai.json.template  config.yaml
SourceCode/frontend/: main.js  package-lock.json  package.json  preload.js
SourceCode/frontend/renderer/: app.js  index.html  styles.css
SourceCode/scripts/: build_all.py  build_backend.py
SourceCode/taskguard/: agent.py  config_loader.py
SourceCode/taskguard/alerters/: __init__.py  engine.py  rules.py
SourceCode/taskguard/analyzers/: __init__.py  pipeline.py  regex_extractor.py  state_analyzer.py
SourceCode/taskguard/api/: __init__.py  events.py  routes.py  server.py  websocket.py
SourceCode/taskguard/cli/: __init__.py  main.py  shell.py
SourceCode/taskguard/collectors/: __init__.py  base.py  bash_collector.py  file_collector.py  process_collector.py
SourceCode/taskguard/crash/: __init__.py  dumper.py  models.py
SourceCode/taskguard/interaction/: __init__.py  intent_parser.py  parser.py  prompts.py
SourceCode/taskguard/llm/: __init__.py  base.py  claude_provider.py  factory.py  openai_provider.py
SourceCode/tests/: smoke_fr3.py  smoke_fr4.py  test_agent_loop.py  test_alerters_engine.py  test_alerters_rules.py  test_analyzers_pipeline.py  test_analyzers_regex.py  test_analyzers_state.py  test_api_alerts.py  test_api_e2e.py  test_api_events.py  test_api_routes.py  test_api_websocket.py  test_cli_main.py  test_cli_shell.py  test_collectors_bash.py  test_collectors_file.py  test_collectors_process.py  test_config_loader.py  test_crash_dumper.py  test_interaction_intent.py  test_interaction_parser.py  test_llm_base.py  test_llm_claude_provider.py  test_llm_factory.py  test_llm_openai_provider.py  test_models_alert.py  test_models_crashdump.py  test_models_progress.py  test_models_snapshot.py  test_models_task.py  test_storage_metrics.py  test_storage_metrics_alerts.py  test_storage_progress.py  test_storage_task_store.py  test_tools_find_process.py  test_tools_help.py  test_tools_query.py  test_tools_query_progress.py  test_tools_watch.py  (+1 more)
(+66 files in other folders)
